[package]
name = "evm-cosmos-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.2", features = ["full"]}
ethers = "2.0.14"
cosmos-sdk-proto = "0.24.0"
tonic = "0.12.1"
prost = "0.13.1"
serde = { version = "1.0.208",  features = ["derive"]}
serde_json = "1.0.125"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
mockall = "0.13.0"
tokio-test = "0.4.4"
